[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_python_package"
version = "0.0.1"
authors = [
  { name="Meg Acevedo", email="meghillary.acevedo@ucalgary.ca" },
]
description="A Python package for Lab 1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/datspaceguy/goph419-f2023-lab01-1-stMA"
